--- a/css/main.css
+++ b/css/main.css
@@ -71,6 +71,10 @@ a {
 
 /* Dropdown Knapp */
 
+.dropdown-nav{
+
+}
+
 /* Her styles alle nedtrekksmenyene på hele nettsiden vår */
 .dropdown-button{
   display: grid;
@@ -108,6 +112,7 @@ a {
   /* Det er lagt til en skygge bak menyen slik at den skal være bedre synlig på siden*/
   /* a i rgba sørger for at skyggen er mer blurry */
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  width: 20rem;
 }
 
 /* Linkene inne i nedtrekksmenyen */
